Release history for CPAN-Changes-Dependencies-Details

{{$NEXT}}

0.001006 2015-07-19T20:11:38Z adebbd4
 [Bugfix]
 - Guard tests against further changes.

0.001005 2015-07-16T19:01:08Z d3a7714
 [Bugfix]
 - Was too sensitive to whitespace at EOF and was affected by recent changes in CPAN::Changes
 - Now has a guard block in the test so the test will only run when CPAN::Changes itself serializes as expected.
 - Tests were poorly adapted for reporting differences in utf8 data.

 [Dependencies::Stats]
 - Dependencies changed since 0.001004, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +9 ↑2 -3 (recommends: +1, suggests: ↑2)
 - runtime: ↓1 -1 (recommends: +1)
 - test: +2 (recommends: ↑1 ↓1)

0.001004 2014-10-11T08:49:42Z 1c27f83
 [Bugfix]
 - Be slightly less dumb how generated releases get added to the log.
 - This is a forwards compatibility fix also ;)

 [Dependencies::Stats]
 - Dependencies changed since 0.001003, see misc/*.deps* for details
 - develop: +2 ↑1 (suggests: ↑1)
 - test: (recommends: ↑1)

0.001003 2014-08-30T01:14:34Z
 [00 Trivial]
 - no code changes.
 - Fixup author metadata

 [Dependencies::Stats]
 - Dependencies changed since 0.001002, see misc/*.deps* for details
 - develop: +1 ↑1 (suggests: ↑2)

 [Tests]
 - Slight coverage improvement

0.001002 2014-08-15T21:12:19Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - whitespace adjustment.

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

 [Misc]
 - Improve source side POD to reduce build side whitespace.

0.001001 2014-08-06T19:21:21Z
 [00 Trivial]
 - Update ReportPrereqs test
 - no code changes

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - test: -3

0.001000 2014-08-01T11:36:44Z
 - First version.