@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.037.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.009.
 use strict;
 use warnings;
 
@@ -13,7 +13,6 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0
   },
   "DISTNAME" => "CPAN-Changes-Dependencies-Details",
-  "EXE_FILES" => [],
   "LICENSE" => "perl",
   "MIN_PERL_VERSION" => "5.006",
   "NAME" => "CPAN::Changes::Dependencies::Details",
@@ -31,7 +30,7 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
     "Test::Differences" => 0,
-    "Test::More" => "0.89",
+    "Test::More" => 0,
     "charnames" => 0
   },
   "VERSION" => "0.001007",
@@ -51,7 +50,7 @@ my %FallbackPrereqs = (
   "Moo" => 0,
   "MooX::Lsub" => 0,
   "Test::Differences" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "charnames" => 0,
   "strict" => 0,
   "warnings" => 0
