@@ -1,6 +1,14 @@
 Release history for CPAN-Changes-Dependencies-Details
 
 {{$NEXT}}
+ [Bugfix]
+ - Avoid test failures on 5.26 w/ -Ddefault_inc_excludes_dot
+ - Closes https://github.com/kentnl/CPAN-Changes-Group-Dependencies-Details/issues/2
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001006, see misc/*.deps* for details
+ - develop: +3 ↑2 (suggests: ↑2)
+ - test: ↓1
 
 0.001006 2015-07-19T20:11:38Z adebbd4
  [Bugfix]
